public/stylesheets/_forms.scss
.cardBorder {
  border: 5px solid $mainGreen;
  border-radius: 1rem;
}
.cardSize {
  width: 50vw;
  .cardImgContainer {
    width: 100%;
    .cardImg {
      display: block;
      height: 25vh;
      margin: 2.5rem auto;
    }
    @media screen and (max-width: 600px) {
      .cardImg {
        height: 15vh;
      }
    }
  }
}

.submit-btn {
  background: $mainGreen;
  color: white;
  font-weight: 500;
  &:hover {
    color: white;
    background: $mutedGreen;
  }
}

.req-asterik:after {
  color: red;
  content: "*";
}

.back {
  text-decoration: none;
  color: $darkGreen;
}

